--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongodb-legacy": "^6.0.1",
     "mongoose": "^8.0.3",
