--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb-legacy": "^6.0.1",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
