--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb-legacy": "^6.0.1",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "validator": "^13.11.0"
   }
