--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@img/sharp-linux-x64": "^0.33.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -17,6 +18,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "sharp": "^0.33.1",
     "validator": "^13.11.0"
   }
 }
