--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,7 +5,8 @@
   "main": "mongodb.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "@img/sharp-linux-x64": "^0.33.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb-legacy": "^6.0.1",
     "mongoose": "^8.0.3",
