--- a/chat-app-backend/package.json
+++ b/chat-app-backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
